--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -4265,7 +4265,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "595093df",
+   "id": "6f09f5cd",
    "metadata": {},
    "outputs": [
     {
@@ -4405,7 +4405,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "378ce85f",
+   "id": "21d4b2a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4422,7 +4422,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "21b09e51",
+   "id": "3e410070",
    "metadata": {},
    "outputs": [
     {
@@ -4449,7 +4449,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "1b2d6fe8",
+   "id": "dbbad1db",
    "metadata": {},
    "outputs": [
     {
@@ -4486,7 +4486,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "3a488b84",
+   "id": "d077f6e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4503,7 +4503,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "651a5603",
+   "id": "79639385",
    "metadata": {},
    "outputs": [
     {
@@ -4530,7 +4530,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "452baef6",
+   "id": "76378652",
    "metadata": {},
    "outputs": [
     {
@@ -4567,7 +4567,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "8678b201",
+   "id": "4ae6b4d8",
    "metadata": {},
    "outputs": [
     {
@@ -4673,7 +4673,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "4b4748db",
+   "id": "bc46e6b4",
    "metadata": {},
    "outputs": [
     {
@@ -4779,7 +4779,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "e101d62d",
+   "id": "081b4166",
    "metadata": {},
    "outputs": [
     {
@@ -4886,7 +4886,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "b936e8df",
+   "id": "89e7a494",
    "metadata": {},
    "outputs": [
     {
@@ -4993,7 +4993,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "79d3f8b4",
+   "id": "0d9b70bf",
    "metadata": {},
    "outputs": [
     {
@@ -5023,7 +5023,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "1681e54c",
+   "id": "8735ccbe",
    "metadata": {},
    "outputs": [
     {
@@ -5062,7 +5062,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "bf19d4ca",
+   "id": "01df5510",
    "metadata": {},
    "outputs": [
     {
@@ -5101,7 +5101,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "97586e6b",
+   "id": "c73488c9",
    "metadata": {},
    "outputs": [
     {
@@ -5128,7 +5128,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "5c6922bc",
+   "id": "28d18fa5",
    "metadata": {},
    "outputs": [
     {
@@ -5155,7 +5155,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "1f5cbe05",
+   "id": "c3544312",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5167,7 +5167,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "b4cf7422",
+   "id": "ee83f6fa",
    "metadata": {},
    "outputs": [
     {
@@ -5505,7 +5505,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "b6a3e681",
+   "id": "ed00440f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5524,7 +5524,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "d8b35aa5",
+   "id": "cae155bb",
    "metadata": {},
    "outputs": [
     {
@@ -5545,7 +5545,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "2a5fce5d",
+   "id": "6f701549",
    "metadata": {},
    "outputs": [
     {
@@ -5664,7 +5664,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "01fb7247",
+   "id": "728f2dce",
    "metadata": {},
    "outputs": [
     {
@@ -5786,7 +5786,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "438cd1e4",
+   "id": "c69b236f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5798,7 +5798,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "20f6667f",
+   "id": "e9e05e03",
    "metadata": {},
    "outputs": [
     {
@@ -5962,7 +5962,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "36983e0a",
+   "id": "93fb081f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5980,8 +5980,234 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 95,
+   "id": "3097c8c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.821598</td>\n",
+       "      <td>83.929843</td>\n",
+       "      <td>93.550225</td>\n",
+       "      <td>96.099437</td>\n",
+       "      <td>89.883853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium (1000-1999)</th>\n",
+       "      <td>83.374684</td>\n",
+       "      <td>83.864438</td>\n",
+       "      <td>93.599695</td>\n",
+       "      <td>96.790680</td>\n",
+       "      <td>90.621535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Large (2000-5000)</th>\n",
+       "      <td>77.746417</td>\n",
+       "      <td>81.344493</td>\n",
+       "      <td>69.963361</td>\n",
+       "      <td>82.766634</td>\n",
+       "      <td>58.286003</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Size                                                                     \n",
+       "Small (<1000)                83.821598              83.929843       93.550225   \n",
+       "Medium (1000-1999)           83.374684              83.864438       93.599695   \n",
+       "Large (2000-5000)            77.746417              81.344493       69.963361   \n",
+       "\n",
+       "                    % Passing Reading  % Overall Passing  \n",
+       "School Size                                               \n",
+       "Small (<1000)               96.099437          89.883853  \n",
+       "Medium (1000-1999)          96.790680          90.621535  \n",
+       "Large (2000-5000)           82.766634          58.286003  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "size_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : size_math_scores,\n",
+    "          \"Average Reading Score\": size_reading_scores,\n",
+    "          \"% Passing Math\": size_passing_math,\n",
+    "          \"% Passing Reading\": size_passing_reading,\n",
+    "          \"% Overall Passing\": size_overall_passing})\n",
+    "\n",
+    "size_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "3dd33a73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>96</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium (1000-1999)</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Large (2000-5000)</th>\n",
+       "      <td>77.7</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>70</td>\n",
+       "      <td>83</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Size                                                                  \n",
+       "Small (<1000)                    83.8                  83.9             94   \n",
+       "Medium (1000-1999)               83.4                  83.9             94   \n",
+       "Large (2000-5000)                77.7                  81.3             70   \n",
+       "\n",
+       "                   % Passing Reading % Overall Passing  \n",
+       "School Size                                             \n",
+       "Small (<1000)                     96                90  \n",
+       "Medium (1000-1999)                97                91  \n",
+       "Large (2000-5000)                 83                58  "
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting.\n",
+    "size_summary_df[\"Average Math Score\"] = size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "size_summary_df[\"Average Reading Score\"] = size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Passing Math\"] = size_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Passing Reading\"] = size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "df8d6995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2a657412",
+   "id": "e972574c",
    "metadata": {},
    "outputs": [],
    "source": []
