--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "16c96d7b",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/6v/36sr2gp15vg3gphyl9bvq2700000gn/T/ipykernel_8822/3904321406.py:18: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/6v/36sr2gp15vg3gphyl9bvq2700000gn/T/ipykernel_27011/3904321406.py:18: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")\n"
      ]
     },
@@ -175,7 +175,7 @@
        "9          84  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ffd1e4ea",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "57af87e8",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e5d7cc96",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "20c1e08f",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "39169           95.0        75.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "50790f4c",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "4        84.0          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9420208c",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d17cc983",
    "metadata": {},
    "outputs": [],
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fadd1a4c",
    "metadata": {},
    "outputs": [],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f39c119e",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "41140cca",
    "metadata": {},
    "outputs": [],
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "8451ee99",
    "metadata": {},
    "outputs": [],
@@ -671,14 +671,16 @@
     "\n",
     "\n",
     "# Step 4.Calculate the overall passing percentage with new total student count.\n",
-    "overall_passing_percentage=overall_passing_math_reading_count/float(new_total_student_count)*100\n"
+    "overall_passing_percentage=overall_passing_math_reading_count/float(new_total_student_count)*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "441e19ac",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -715,27 +717,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>15</td>\n",
-       "      <td>39,170</td>\n",
-       "      <td>$24,649,428.00</td>\n",
-       "      <td>78.9</td>\n",
-       "      <td>81.9</td>\n",
-       "      <td>74.8</td>\n",
-       "      <td>85.7</td>\n",
-       "      <td>64.9</td>\n",
+       "      <td>39170</td>\n",
+       "      <td>24649428</td>\n",
+       "      <td>78.930533</td>\n",
+       "      <td>81.855796</td>\n",
+       "      <td>74.760392</td>\n",
+       "      <td>85.659666</td>\n",
+       "      <td>64.855718</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Total Schools Total Students    Total Budget Average Math Score  \\\n",
-       "0             15         39,170  $24,649,428.00               78.9   \n",
+       "   Total Schools  Total Students  Total Budget  Average Math Score  \\\n",
+       "0             15           39170      24649428           78.930533   \n",
        "\n",
-       "  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
-       "0                  81.9           74.8              85.7              64.9  "
+       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
+       "0              81.855796       74.760392          85.659666          64.855718  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,6 +756,16 @@
     "\n",
     "\n",
     "\n",
+    "district_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "033fd784",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Format the \"Total Students\" to have the comma for a thousands separator.\n",
     "district_summary_df[\"Total Students\"] = district_summary_df[\"Total Students\"].map(\"{:,}\".format)\n",
     "# Format the \"Total Budget\" to have the comma for a thousands separator, a decimal separator and a \"$\".\n",
